# projekty_cpp

break_keyword/: CMakeLists.txt  main.cpp
kontruktor_i_dekonstruktor/: CMakeLists.txt  main.cpp
obliczanie_bmi/: CMakeLists.txt  main.cpp
piramida_pascala/: CMakeLists.txt  main.cpp
prosta_klasa/: CMakeLists.txt  main.cpp
przeladowanie_kontruktora/: CMakeLists.txt  main.cpp
przyklad_klasy/: CMakeLists.txt  main.cpp
randomowy_kod/: CMakeLists.txt  main.cpp
tablice_1/: CMakeLists.txt  main.cpp
wyjatki/: CMakeLists.txt  main.cpp
